
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int hb_dict_t ;


 int HB_VCODEC_X264_MASK ;
 int HB_VCODEC_X265_MASK ;
 int free (char*) ;
 int * hb_dict_init () ;
 int hb_dict_set (int *,char const*,int ) ;
 int hb_value_string (char*) ;
 char* hb_x264_encopt_name (char const*) ;
 char* hb_x265_encopt_name (char const*) ;
 char* strchr (char const*,char) ;
 int strcspn (char*,char*) ;
 char* strdup (char const*) ;

hb_dict_t * hb_encopts_to_dict(const char * encopts, int encoder)
{
    hb_dict_t * dict = ((void*)0);

    if (encopts && *encopts)
    {
        char *cur_opt, *opts_start, *value;
        const char *name;
        dict = hb_dict_init();
        if( !dict )
            return ((void*)0);
        cur_opt = opts_start = strdup(encopts);
        if (opts_start)
        {
            while (*cur_opt)
            {
                name = cur_opt;
                cur_opt += strcspn(cur_opt, ":");
                if (*cur_opt)
                {
                    *cur_opt = 0;
                    cur_opt++;
                }
                value = strchr(name, '=');
                if (value)
                {
                    *value = 0;
                    value++;
                }

                if (encoder & HB_VCODEC_X264_MASK)
                    name = hb_x264_encopt_name(name);





                if (name != ((void*)0))
                {
                    hb_dict_set(dict, name, hb_value_string(value));
                }
            }
        }
        free(opts_start);
    }
    return dict;
}
