; ModuleID = '/home/carl/AnghaBench/HandBrake/libhb/extr_hb_dict.c_hb_encopts_to_dict.c'
source_filename = "/home/carl/AnghaBench/HandBrake/libhb/extr_hb_dict.c_hb_encopts_to_dict.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c":\00", align 1
@HB_VCODEC_X264_MASK = common dso_local global i32 0, align 4
@HB_VCODEC_X265_MASK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @hb_encopts_to_dict(i8* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32* null, i32** %6, align 8
  %11 = load i8*, i8** %4, align 8
  %12 = icmp ne i8* %11, null
  br i1 %12, label %13, label %78

13:                                               ; preds = %2
  %14 = load i8*, i8** %4, align 8
  %15 = load i8, i8* %14, align 1
  %16 = sext i8 %15 to i32
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %78

18:                                               ; preds = %13
  %19 = call i32* (...) @hb_dict_init()
  store i32* %19, i32** %6, align 8
  %20 = load i32*, i32** %6, align 8
  %21 = icmp ne i32* %20, null
  br i1 %21, label %23, label %22

22:                                               ; preds = %18
  store i32* null, i32** %3, align 8
  br label %80

23:                                               ; preds = %18
  %24 = load i8*, i8** %4, align 8
  %25 = call i8* @strdup(i8* %24)
  store i8* %25, i8** %8, align 8
  store i8* %25, i8** %7, align 8
  %26 = load i8*, i8** %8, align 8
  %27 = icmp ne i8* %26, null
  br i1 %27, label %28, label %75

28:                                               ; preds = %23
  br label %29

29:                                               ; preds = %73, %28
  %30 = load i8*, i8** %7, align 8
  %31 = load i8, i8* %30, align 1
  %32 = icmp ne i8 %31, 0
  br i1 %32, label %33, label %74

33:                                               ; preds = %29
  %34 = load i8*, i8** %7, align 8
  store i8* %34, i8** %10, align 8
  %35 = load i8*, i8** %7, align 8
  %36 = call i32 @strcspn(i8* %35, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  %37 = load i8*, i8** %7, align 8
  %38 = sext i32 %36 to i64
  %39 = getelementptr inbounds i8, i8* %37, i64 %38
  store i8* %39, i8** %7, align 8
  %40 = load i8*, i8** %7, align 8
  %41 = load i8, i8* %40, align 1
  %42 = icmp ne i8 %41, 0
  br i1 %42, label %43, label %47

43:                                               ; preds = %33
  %44 = load i8*, i8** %7, align 8
  store i8 0, i8* %44, align 1
  %45 = load i8*, i8** %7, align 8
  %46 = getelementptr inbounds i8, i8* %45, i32 1
  store i8* %46, i8** %7, align 8
  br label %47

47:                                               ; preds = %43, %33
  %48 = load i8*, i8** %10, align 8
  %49 = call i8* @strchr(i8* %48, i8 signext 61)
  store i8* %49, i8** %9, align 8
  %50 = load i8*, i8** %9, align 8
  %51 = icmp ne i8* %50, null
  br i1 %51, label %52, label %56

52:                                               ; preds = %47
  %53 = load i8*, i8** %9, align 8
  store i8 0, i8* %53, align 1
  %54 = load i8*, i8** %9, align 8
  %55 = getelementptr inbounds i8, i8* %54, i32 1
  store i8* %55, i8** %9, align 8
  br label %56

56:                                               ; preds = %52, %47
  %57 = load i32, i32* %5, align 4
  %58 = load i32, i32* @HB_VCODEC_X264_MASK, align 4
  %59 = and i32 %57, %58
  %60 = icmp ne i32 %59, 0
  br i1 %60, label %61, label %64

61:                                               ; preds = %56
  %62 = load i8*, i8** %10, align 8
  %63 = call i8* @hb_x264_encopt_name(i8* %62)
  store i8* %63, i8** %10, align 8
  br label %64

64:                                               ; preds = %61, %56
  %65 = load i8*, i8** %10, align 8
  %66 = icmp ne i8* %65, null
  br i1 %66, label %67, label %73

67:                                               ; preds = %64
  %68 = load i32*, i32** %6, align 8
  %69 = load i8*, i8** %10, align 8
  %70 = load i8*, i8** %9, align 8
  %71 = call i32 @hb_value_string(i8* %70)
  %72 = call i32 @hb_dict_set(i32* %68, i8* %69, i32 %71)
  br label %73

73:                                               ; preds = %67, %64
  br label %29

74:                                               ; preds = %29
  br label %75

75:                                               ; preds = %74, %23
  %76 = load i8*, i8** %8, align 8
  %77 = call i32 @free(i8* %76)
  br label %78

78:                                               ; preds = %75, %13, %2
  %79 = load i32*, i32** %6, align 8
  store i32* %79, i32** %3, align 8
  br label %80

80:                                               ; preds = %78, %22
  %81 = load i32*, i32** %3, align 8
  ret i32* %81
}

declare dso_local i32* @hb_dict_init(...) #1

declare dso_local i8* @strdup(i8*) #1

declare dso_local i32 @strcspn(i8*, i8*) #1

declare dso_local i8* @strchr(i8*, i8 signext) #1

declare dso_local i8* @hb_x264_encopt_name(i8*) #1

declare dso_local i32 @hb_dict_set(i32*, i8*, i32) #1

declare dso_local i32 @hb_value_string(i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
